<resources>
    <string name="app_name">UI Activa</string>
    <string name="active_insulin_title">Insulina Activa</string>
    <string name="active_insulin">Insulina Activa: </string>
    <string name="calc_time">Hora Cálculo: </string>
    <string name="calc_active_insulin">Cálculo de Insulina Activa</string>
    <string name="clean">Limpiar</string>
    <string name="erase_data">Borrar datos</string>
    <string name="store_data">Archivar datos</string>
    <string name="calc">Calcular</string>
    <string name="units">Unidades: </string>
    <string name="duration_minutes">Duración (min): </string>
    <string name="app_time">Hora aplicación: </string>
    <string name="active">ACTIVA</string>
    <string name="inactive">INACTIVA</string>
    <string name="not_found">No se encontraron datos.</string>
    <string name="not_found_insulin">No hay dosis de insulina ingresadas.</string>
    <string name="config">Configuración</string>
    <string name="search_insulin">Buscar Insulina</string>
    <string name="search_criterial">Criterio de búsqueda</string>
    <string name="enter_insulin_name"><font size="15">Ingrese el nombre de la insulina</font></string>
    <string name="search">Buscar</string>
    <string name="quick">RÁPIDA</string>
    <string name="slow">LENTA</string>
    <string name="insulin">Insulina: </string>
    <string name="general_data">Datos Generales</string>
    <string name="name">Nombre: </string>
    <string name="description">Descripción</string>
    <string name="enter_insulin_descrption"><font size="15">Ingrese aquí la descripción o datos relevantes de la insulina.</font></string>
    <string name="lab">Laboratorio: </string>
    <string name="enter_lab_name"><font size="15">Ingrese el laboratorio de la insulina</font></string>
    <string name="quick_action">Acción Rápida</string>
    <string name="duration">Duración: </string>
    <string name="minutes">Minutos </string>
    <string name="minutes_short"> min </string>
    <string name="hours">Horas </string>
    <string name="hours_short"> hrs </string>
    <string name="must_enter_name">Debe ingresar un nombre.</string>
    <string name="must_enter_duration">Debe definir una duración.</string>
    <string name="must_duration_bigger_than_zero">La duración debe ser un número mayor a 0.</string>
    <string name="delete_insulin_confirmation">¿Desea eliminar esta insulina?</string>
    <string name="delete_active_insulin_confirmation">¿Desea eliminar esta insulina activa?</string>
    <string name="delete">Eliminar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="delete_all_inactive_insulin_confirmation">¿Desea borrar todas las insulinas inactivas ingresadas?</string>
    <string name="store_all_inactive_insulin_confirmation">¿Desea archivar todas las insulinas inactivas ingresadas?</string>
    <string name="delete_all_stores_inactive_insulin_confirmation">Hay muchas insulinas inactivas. ¿Desea borrarlas para agilizar la aplicación?</string>
    <string name="store_all_stores_inactive_insulin_confirmation">Hay muchas insulinas inactivas. ¿Desea archivarlas para agilizar la aplicación?</string>
    <string name="insulin_active_data">Datos de la insulina aplicada </string>
    <string name="select_insuline"><font size="15">Seleccione una insulina</font></string>
    <string name="units_applied">Unidades aplicadas: </string>
    <string name="select_one_insulin"><font size="15">Seleccione una insulina</font></string>
    <string name="must_select_insulin">Debe seleccionar una insulina.</string>
    <string name="must_enter_units">Debe indicar la cantidad de unidades aplicadas.</string>
    <string name="time_applied">Fecha/Hora aplicación: </string>
    <string name="yyyy">aaaa</string>
    <string name="mm">mm</string>
    <string name="dd">dd</string>
    <string name="now">Ahora</string>
    <string name="hh">hh</string>
    <string name="MM">MM</string>
    <string name="insulin_applied_data">Datos de la dosis aplicada</string>
    <string name="must_enter_valid_day">Debe ingresar un día válido.</string>
    <string name="must_enter_valid_month">Debe ingresar un mes válido.</string>
    <string name="must_enter_valid_year">Debe ingresar un año válido.</string>
    <string name="must_enter_valid_hour">Debe ingresar una hora válida.</string>
    <string name="must_enter_valid_minute">Debe ingresar unos minutos válido.</string>
    <string name="must_enter_valid_date">Debe ingresar una fecha y hora válida. No puede ingresar una fecha a futuro ni de más de 24 horas pasadas.</string>
    <string name="duration_separator"> / </string>
    <string name="remain">Quedan: </string>
    <string name="IU">UI</string>
    <string name="IU_2">UI: </string>
    <string name="app_insulins">Insulinas aplicadas</string>
    <string name="no_insulin_msg">No hay insulinas registradas en la aplicación.\nIngréselas en \'Configuración\' y vuelva a intentarlo.</string>
    <string name="hour">Hora: </string>
    <string name="insulin_title">Insulina</string>
    <string name="cant_delete_in_use_insulin">No puede eliminar una Insulina en uso.</string>
    <string name="cant_modif_in_use_insulin">No puede modificar una Insulina en uso.</string>
    <string name="total">TOTAL</string>
    <string name="receive_notifications">Recibir Alertas</string>
    <string name="must_have_notificaion_permissions">Debe permitir las notificaciones para esta aplicación. Cambie esta configuración en los ajustes del dispositivo y vuelva a intentarlo.</string>
    <string name="must_have_backup_permissions">Debe permitir el acceso a Almacenamiento para esta aplicación.</string>
    <string name="active_insulin_expired">Insulina Activa finalizada</string>
    <string name="notif_created">Notificación creada</string>
    <string name="notif_modified">Notificación modificada</string>
    <string name="create_notif_confirmation">¿Desea crear notificaciones para las insulinas activas ya ingresadas?</string>
    <string name="notifications">Notificaciones</string>
    <string name="notif_all_active_insulin_created">Se crearon notificaciones para las insulinas activas.</string>
    <string name="notif_from_now">Se crearán notificaciones a partir de ahora.</string>
    <string name="active_insulin_expired_info">Información de la Insulina aplicada que acaba de finalizar:</string>
    <string name="notif_not_found">No se encontró notificación pendiente.</string>
    <string name="notif_all_active_insulin_deleted">Se eliminaron las notificaciones pendientes.</string>
    <string name="cant_create_inactive_insulin">No se puede ingresar una dosis de insulina ya inactiva.</string>
    <string name="color_active">#39a127</string>
    <string name="color_inactive">#ff0000</string>
    <string name="backup_file">Archivar datos en archivo</string>
    <string name="backup_file_name">IA_Backup.txt</string>
    <string name="backup_success">Copia de respaldo de datos realizado con éxito al Archivo:  </string>
    <string name="backup_fail_permission">No se pudo generar la copia de respaldo de los datos. Verifique los permisos de la aplicación.</string>
    <string name="backup_fail_space_or_permission">No se pudo generar la copia de respaldo. Verifique que tenga espacio en almacenamiento en el dispositivo y/o permisos de la aplicación.</string>
    <string name="backup_file_headers">Insulina;Laboratorio;Unidades;Duración;Fecha;Descripción;Modo Aplicación;</string>
    <string name="backup_path">\Se guardarán un backup de las insulinas inactivas en \</string>
    <string name="dose_in">Dosis en:</string>
    <string name="carbs_grams">Gr. CH:</string>
    <string name="grams">Gramos:</string>
    <string name="ratio">Ratio:</string>
    <string name="calculate_dose">Calcular con CH</string>
    <string name="food_data">Información de la comida</string>
    <string name="food_data_msg">Ingrese el Ratio y los Carbohidratos de la comida para el cálculo de insulina necesaria.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="comments">Comentarios</string>
    <string name="ratio_msg">El Ratio indica la cantidad de CarboHidratos por 1 Unidad de Insulina.\n(Por Ejemplo, un Ratio 20 indica que se utiliza 1U cada 20grCH)</string>
    <string name="carbs_msg">Gramos de Carbohidratos contenidos en la comida.</string>
    <string name="hide">Ocultar</string>
    <string name="show">Mostrar</string>
    <string name="active_total">Total Activo</string>

    <string name="search_ratio">Buscar Ratio</string>
    <string name="hour_ratio">Hora:</string>
    <string name="ratio_update">Modificar Ratio</string>
    <string name="hora_msg">Hora del día en que aplica el ratio. (Formato 24hs)</string>
    <string name="ratio_ppal">Ratio</string>
    <string name="ratio_24_hours">Ratio en 24hs.</string>
    <string name="ratio_24_hours_msg1">Se utilizará el valor de Ratio ingresado para las 24 horas del día.</string>
    <string name="share_backup">Compartir Datos</string>
    <string name="backup_fail_share">No se pudo compartir el archivo. Verifique que esté generado en </string>
    <string name="ratio_range_hours_msg">Se utilizará el mismo Ratio para el intervalo de horas indicado (inclusive).</string>
    <string name="from_hour">Desde:</string>
    <string name="to_hour">Hasta:</string>
    <string name="ratio_range_hours">Ratio en Intervalo</string>
    <string name="invalid_range">Intervalo de tiempo inválido.</string>
    <string name="application">Aplicación: </string>
    <string name="manual">Manual</string>
    <string name="pump">Infusor</string>

</resources>