<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainConfiguracionActivity"
    android:background="@drawable/borde_color_pleno"
    android:layout_margin="10dp"
    android:gravity="top"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_margin="5dp"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/config" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/borde_main_botones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:onClick="clickRatios"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"
            android:text="@string/ratio_ppal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/borde_main_botones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:onClick="clickInsulinas"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"
            android:text="@string/insulin_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/borde_main_botones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:onClick="clickCompartitBackup"
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/compartirDatosLL">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"
            android:text="@string/share_backup" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_margin="5dp"
        android:gravity="bottom"
        android:padding="10dp"
        android:orientation="vertical">

        <CheckBox
            style="@style/EditTextIngresoDatos"
            android:textColor="@color/white"
            android:text="@string/receive_notifications"
            android:checked="false"
            android:onClick="clickRecibirNotificaciones"
            android:id="@+id/notificacionesCB"/>

        <CheckBox
            style="@style/EditTextIngresoDatos"
            android:textColor="@color/white"
            android:text="@string/backup_file"
            android:checked="false"
            android:onClick="clickGuardarEnArchivo"
            android:id="@+id/archivoCB"/>

    </LinearLayout>


</LinearLayout>